--- a/public/css/app.css
+++ b/public/css/app.css
@@ -841,6 +841,13 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.mt-8{
+  margin-top: 2rem;
+}
 .mb-12{
   margin-bottom: 3rem;
 }
@@ -850,14 +857,14 @@ body {
 .mt-4{
   margin-top: 1rem;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
 .mb-4{
   margin-bottom: 1rem;
 }
 .mt-5{
   margin-top: 1.25rem;
-}
-.mt-8{
-  margin-top: 2rem;
 }
 .ml-3{
   margin-left: 0.75rem;
@@ -885,12 +892,6 @@ body {
 }
 .mb-3{
   margin-bottom: 0.75rem;
-}
-.mt-6{
-  margin-top: 1.5rem;
-}
-.mt-10{
-  margin-top: 2.5rem;
 }
 .block{
   display: block;
@@ -1036,6 +1037,12 @@ body {
 .grow{
   flex-grow: 1;
 }
+.basis-96{
+  flex-basis: 24rem;
+}
+.basis-28{
+  flex-basis: 7rem;
+}
 .origin-top-right{
   transform-origin: top right;
 }
@@ -1082,6 +1089,9 @@ body {
 .cursor-pointer{
   cursor: pointer;
 }
+.cursor-not-allowed{
+  cursor: not-allowed;
+}
 .select-none{
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -1118,17 +1128,17 @@ body {
 .justify-between{
   justify-content: space-between;
 }
-.gap-10{
-  gap: 2.5rem;
+.gap-20{
+  gap: 5rem;
 }
 .gap-4{
   gap: 1rem;
 }
+.gap-10{
+  gap: 2.5rem;
+}
 .gap-2{
   gap: 0.5rem;
-}
-.gap-20{
-  gap: 5rem;
 }
 .gap-12{
   gap: 3rem;
@@ -1144,9 +1154,6 @@ body {
 }
 .gap-5{
   gap: 1.25rem;
-}
-.gap-16{
-  gap: 4rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1176,14 +1183,17 @@ body {
 .whitespace-nowrap{
   white-space: nowrap;
 }
-.rounded-lg{
-  border-radius: 0.5rem;
+.break-words{
+  overflow-wrap: break-word;
+}
+.rounded-2xl{
+  border-radius: 1rem;
 }
 .rounded{
   border-radius: 0.25rem;
 }
-.rounded-2xl{
-  border-radius: 1rem;
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 .rounded-\[50\%\]{
   border-radius: 50%;
@@ -1193,9 +1203,6 @@ body {
 }
 .rounded-md{
   border-radius: 0.375rem;
-}
-.rounded-3xl{
-  border-radius: 1.5rem;
 }
 .border{
   border-width: 1px;
@@ -1270,6 +1277,10 @@ body {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1281,10 +1292,6 @@ body {
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-blue-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 .bg-gray-500{
   --tw-bg-opacity: 1;
@@ -1333,18 +1340,6 @@ body {
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
 }
-.bg-blue-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-.bg-zinc-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(228 228 231 / var(--tw-bg-opacity));
-}
-.bg-zinc-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-}
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
@@ -1368,21 +1363,49 @@ body {
 .p-0{
   padding: 0px;
 }
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+.py-0{
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .px-10{
   padding-left: 2.5rem;
@@ -1392,14 +1415,6 @@ body {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .py-24{
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -1407,10 +1422,6 @@ body {
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 .py-6{
   padding-top: 1.5rem;
@@ -1424,13 +1435,8 @@ body {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 .pb-4{
   padding-bottom: 1rem;
@@ -1438,14 +1444,14 @@ body {
 .pt-4{
   padding-top: 1rem;
 }
-.pb-3{
-  padding-bottom: 0.75rem;
-}
 .pt-3{
   padding-top: 0.75rem;
 }
 .pb-2{
   padding-bottom: 0.5rem;
+}
+.pt-2{
+  padding-top: 0.5rem;
 }
 .pl-4{
   padding-left: 1rem;
@@ -1455,9 +1461,6 @@ body {
 }
 .pb-8{
   padding-bottom: 2rem;
-}
-.pt-2{
-  padding-top: 0.5rem;
 }
 .pt-8{
   padding-top: 2rem;
@@ -1495,12 +1498,6 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pl-8{
-  padding-left: 2rem;
-}
-.pl-12{
-  padding-left: 3rem;
-}
 .pl-2{
   padding-left: 0.5rem;
 }
@@ -1516,21 +1513,29 @@ body {
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 .text-xl{
   font-size: 1.25rem;
@@ -1540,17 +1545,9 @@ body {
   font-size: 1rem;
   line-height: 1.5rem;
 }
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
-}
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 .font-medium{
   font-weight: 500;
@@ -1567,21 +1564,29 @@ body {
 .font-thin{
   font-weight: 100;
 }
-.text-zinc-800{
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
-}
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-zinc-400{
+.text-zinc-600{
   --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
+  color: rgb(82 82 91 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 .text-zinc-700{
   --tw-text-opacity: 1;
   color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+.text-zinc-800{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 .text-gray-700{
   --tw-text-opacity: 1;
@@ -1598,10 +1603,6 @@ body {
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-zinc-600{
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 .text-sky-600{
   --tw-text-opacity: 1;
@@ -1651,6 +1652,10 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+.underline{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(161 161 170 / var(--tw-placeholder-opacity));
@@ -1675,6 +1680,9 @@ body {
 .opacity-75{
   opacity: 0.75;
 }
+.opacity-50{
+  opacity: 0.5;
+}
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1689,6 +1697,36 @@ body {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline{
+  outline-style: solid;
+}
+.outline-0{
+  outline-width: 0px;
+}
+.outline-1{
+  outline-width: 1px;
+}
+.outline-2{
+  outline-width: 2px;
+}
+.outline-offset-1{
+  outline-offset: 1px;
+}
+.outline-blue-600{
+  outline-color: #2563eb;
+}
+.outline-black{
+  outline-color: #000;
+}
+.outline-zinc-300{
+  outline-color: #d4d4d8;
+}
+.outline-zinc-400{
+  outline-color: #a1a1aa;
+}
+.outline-zinc-200{
+  outline-color: #e4e4e7;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1769,6 +1807,11 @@ body {
   padding-right: 1rem;
 }
 
+.hover\:text-blue-600:hover{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
 .hover\:text-blue-700:hover{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
@@ -1777,16 +1820,6 @@ body {
 .hover\:text-sky-600:hover{
   --tw-text-opacity: 1;
   color: rgb(2 132 199 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-500:hover{
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-600:hover{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .focus\:border-transparent:focus{
